upgrade to use JDK25 features