@@ -201,9 +201,9 @@ public class ItemEditorView extends VerticalLayout
         resetButton = resetBackSaveView.getReset();
         resetButton.setEnabled(false);
 
-        backButton.addClickListener(event -> navigateBack());
-        saveButton.addClickListener(event -> validateSave(ivm));
-        resetButton.addClickListener(event -> binder.readBean(ivm));
+        backButton.addClickListener(_ -> navigateBack());
+        saveButton.addClickListener(_ -> validateSave(ivm));
+        resetButton.addClickListener(_ -> binder.readBean(ivm));
         resetBackSaveView.getCancel().addClickShortcut(Key.ESCAPE);
 
         return resetBackSaveView;
@@ -291,7 +291,7 @@ public class ItemEditorView extends VerticalLayout
         final CommandData takeCommandFailed_allreadyCarried = createTakeCommandData(aTakeVerb, anItemData);
         takeCommandFailed_allreadyCarried.getPreConditions().add(carriedCondition);
         MessageActionData messageData_alreadyCarried = new MessageActionData();
-        messageData_alreadyCarried.setMessageId(String.format("You already carry the %s.", itemDescription));
+        messageData_alreadyCarried.setMessageId("You already carry the %s.".formatted(itemDescription));
         takeCommandFailed_allreadyCarried.setAction(messageData_alreadyCarried);
         anItemData.getCommandProviderData().add(takeCommandFailed_allreadyCarried);
 
@@ -302,7 +302,7 @@ public class ItemEditorView extends VerticalLayout
         final CommandData dropCommandFailed_notCarried = createDropCommandData(aDropVerb, anItemData);
         dropCommandFailed_notCarried.getPreConditions().add(notCarriedCondition);
         MessageActionData messageData_notCarried = new MessageActionData();
-        messageData_notCarried.setMessageId(String.format("You are not carrying the %s.", itemDescription));
+        messageData_notCarried.setMessageId("You are not carrying the %s.".formatted(itemDescription));
         dropCommandFailed_notCarried.setAction(messageData_notCarried);
         anItemData.getCommandProviderData().add(dropCommandFailed_notCarried);
 
